--- a/app/partials/todo.jade
+++ b/app/partials/todo.jade
@@ -10,7 +10,7 @@ div(ng-app='ng-app')
         label(class='checkbox inline')
           input(type='checkbox', ng-model='todo.done')
           span(class='done{{todo.done}}') {{todo.text}}
-    form(class='form-inline', ng-submit='addTodo()')
-      p
-        input(type='text', ng-model='todoText', size='30', placeholder='add new todo here')
-        input.btn.btn-primary(type='submit', value='add')
+    form(ng-submit='addTodo()')
+      input.btn.btn-primary(type='submit', value='add')
+      div.col-sm-2
+        input.form-control(type='text', ng-model='todoText', size='30', placeholder='add new todo here')
